@@ -88,6 +88,7 @@ def _set_protocol_handlers(new_handlers):
 def _clear_protocol_handlers():
     global transport_list_registry
     transport_list_registry = TransportListRegistry()
+    _default_ports.clear()
 
 
 def _get_transport_modules():
@@ -104,6 +105,17 @@ def _get_transport_modules():
     result = list(modules)
     result.sort()
     return result
+
+
+_default_ports = {}
+
+def _get_default_port(scheme):
+    """Return the registered default port for this protocol scheme."""
+    try:
+        port = _default_ports.get(scheme + '://')
+    except KeyError:
+        port = None
+    return port
 
 
 class TransportListRegistry(registry.Registry):
@@ -139,8 +151,10 @@ class TransportListRegistry(registry.Registry):
 transport_list_registry = TransportListRegistry( )
 
 
-def register_transport_proto(prefix, help=None, info=None):
+def register_transport_proto(prefix, help=None, info=None, default_port=None):
     transport_list_registry.register_transport(prefix, help, info)
+    if default_port is not None:
+        _default_ports[prefix] = default_port
 
 
 def register_lazy_transport(prefix, module, classname):
@@ -1255,6 +1269,10 @@ class ConnectedTransport(Transport):
         host = urllib.unquote(host)
         path = urllib.unquote(path)
 
+        if port is None:
+            # The port isn't explicitly specified, so return the default (if
+            # there is one).
+            port = _get_default_port(scheme)
         return (scheme, user, password, host, port, path)
 
     @staticmethod
@@ -1285,7 +1303,9 @@ class ConnectedTransport(Transport):
             # have one so that it doesn't get accidentally
             # exposed.
             netloc = '%s@%s' % (urllib.quote(user), netloc)
-        if port is not None:
+        if port is not None and port != _get_default_port(scheme):
+            # Include the port in the netloc (unless it's the same as the
+            # default, in which case we omit it as it is redundant).
             netloc = '%s:%d' % (netloc, port)
         path = urllib.quote(path)
         return urlparse.urlunparse((scheme, netloc, path, None, None, None))
@@ -1691,7 +1711,8 @@ register_lazy_transport('vfat+',
                         'bzrlib.transport.fakevfat',
                         'FakeVFATTransportDecorator')
 register_transport_proto('bzr://',
-            help="Fast access using the Bazaar smart server.")
+            help="Fast access using the Bazaar smart server.",
+            default_port=4155)
 
 register_lazy_transport('bzr://',
                         'bzrlib.transport.remote',
